--- a/clients.html
+++ b/clients.html
@@ -10,8 +10,12 @@
       background-color: #f5faff;
       font-family: 'Segoe UI', sans-serif;
     }
-    .logo {
-      height: 80px;
+   <body>
+  <div style="display: flex; justify-content: space-between; align-items: center; padding: 10px;">
+    <img src="https://raw.githubusercontent.com/proMixed/promixed-crm-api/main/Logo%20for%20heaset.png" alt="promixed logo" style="height: 60px;">
+    <h2 style="margin: 0;">proMixed CRM</h2>
+  </div>
+
     }
     .forecast-box {
       background-color: #e0f0ff;
