--- a/form.html
+++ b/form.html
@@ -43,6 +43,11 @@
   </style>
 </head>
 <body>
+  <div style="display: flex; justify-content: space-between; align-items: center; padding: 10px;">
+    <img src="https://raw.githubusercontent.com/proMixed/promixed-crm-api/main/Logo%20for%20heaset.png" alt="promixed logo" style="height: 60px;">
+    <h2 style="margin: 0;">proMixed CRM</h2>
+  </div>
+
   <div class="header">
     <h5 class="text-primary">טופס לקוחות - Promixed CRM</h5>
     <img src="promixed-new-logo_2022A.png" alt="Promixed Logo" class="logo">
